Laz loading of checkbox treeviewer with text search