@@ -2,10 +2,15 @@ package org.abapgit.adt.ui.internal.wizards;
 
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
+import java.util.Map;
 import java.util.Set;
-import java.util.stream.Collectors;
+import java.util.concurrent.Executors;
+import java.util.concurrent.ScheduledExecutorService;
+import java.util.concurrent.ScheduledFuture;
+import java.util.concurrent.TimeUnit;
 
 import org.abapgit.adt.backend.model.agitpullmodifiedobjects.IOverwriteObject;
 import org.abapgit.adt.ui.internal.i18n.Messages;
@@ -26,26 +31,50 @@ import org.eclipse.jface.viewers.TreeViewerColumn;
 import org.eclipse.jface.wizard.IWizardPage;
 import org.eclipse.jface.wizard.WizardPage;
 import org.eclipse.swt.SWT;
+import org.eclipse.swt.layout.FillLayout;
 import org.eclipse.swt.layout.GridData;
 import org.eclipse.swt.widgets.Composite;
+import org.eclipse.swt.widgets.ScrollBar;
+import org.eclipse.swt.widgets.Text;
 
 /**
- * A wizard page, which lists all the modified objects for a repository and
- * provides a check box to select the objects which should be pulled from remote
- * repository and overwrite local versions..
- *
- * @author I517012
- *
+ * Wizard page showing modified objects for pull with lazy loading and debounced
+ * async search filter (optimized and non-blocking for large datasets).
  */
 public class AbapGitWizardPageObjectsSelectionForPull extends WizardPage {
 
 	private static final String PAGE_NAME = AbapGitWizardPageObjectsSelectionForPull.class.getName();
 
-	Set<IRepositoryModifiedObjects> repoToModifiedObjects;
+	private final Set<IRepositoryModifiedObjects> repoToModifiedObjects;
 	protected CheckboxTreeViewer modifiedObjTreeViewer;
 	private Composite container;
 	private Object[] selectedObjectsForRepository;
 	private TreeColumnLayout treeColumnLayout;
+
+	private final Map<IRepositoryModifiedObjects, Integer> repoOffsets = new HashMap<>();
+
+	// Holds filtered results during search without changing repo data
+	private final Map<IRepositoryModifiedObjects, List<IOverwriteObject>> searchFilteredChildren = new HashMap<>();
+
+	// Search-related
+	private Text searchText;
+	// single-thread scheduled executor for debounce; heavy work uses background thread logic
+	private final ScheduledExecutorService searchExecutor = Executors.newSingleThreadScheduledExecutor();
+	private ScheduledFuture<?> pendingSearch;
+	private volatile boolean cancelFiltering = false;
+	private String lastQuery = ""; //$NON-NLS-1$
+
+	// for avoiding unnecessary UI updates
+	private final Set<IRepositoryModifiedObjects> lastFilteredRepos = new HashSet<>();
+
+	// debounce delay (ms)
+	private static final long DEBOUNCE_MS = 400L;
+
+	// yield interval to allow the background thread to breathe
+	private static final int YIELD_REPO_INTERVAL = 20;
+
+	// safety cap to avoid overwhelming the viewer with too many results
+	private static final int MAX_MATCHED_OBJECTS = 5000;
 
 	public AbapGitWizardPageObjectsSelectionForPull(Set<IRepositoryModifiedObjects> repoToModifiedOverwriteObjects, String message,
 			int messageType) {
@@ -57,9 +86,14 @@ public class AbapGitWizardPageObjectsSelectionForPull extends WizardPage {
 
 	@Override
 	public void createControl(Composite parent) {
-		this.treeColumnLayout = new TreeColumnLayout();
+		Composite root = new Composite(parent, SWT.NONE);
+		root.setLayoutData(new GridData(SWT.FILL, SWT.FILL, true, true));
+		root.setLayout(new org.eclipse.swt.layout.GridLayout(1, false));
 
-		this.container = new Composite(parent, SWT.NONE);
+		addSearchBar(root);
+
+		this.container = new Composite(root, SWT.NONE);
+		this.treeColumnLayout = new TreeColumnLayout();
 		this.container.setLayout(this.treeColumnLayout);
 		this.container.setLayoutData(new GridData(SWT.FILL, SWT.FILL, true, true));
 
@@ -76,32 +110,214 @@ public class AbapGitWizardPageObjectsSelectionForPull extends WizardPage {
 
 		this.modifiedObjTreeViewer.setInput(this.repoToModifiedObjects);
 
-		setControl(this.container);
+		setControl(root);
 		setPageComplete(true);
-		this.modifiedObjTreeViewer.setAutoExpandLevel(AbstractTreeViewer.ALL_LEVELS);
 
 		addListeners();
 	}
 
-	private void createColumns() {
+	private void addSearchBar(Composite parent) {
+		Composite searchComposite = new Composite(parent, SWT.NONE);
+		searchComposite.setLayoutData(new GridData(SWT.FILL, SWT.TOP, true, false));
+		searchComposite.setLayout(new FillLayout(SWT.HORIZONTAL));
 
-		// TYPE/OBJECT COLUMN
+		this.searchText = new Text(searchComposite, SWT.SEARCH | SWT.ICON_SEARCH | SWT.CANCEL);
+		this.searchText.setMessage("Search objects..."); //$NON-NLS-1$
+
+		this.searchText.addModifyListener(e -> {
+			final String query = this.searchText.getText().trim().toLowerCase();
+
+			// Avoid scheduling same query repeatedly
+			if (query.equals(this.lastQuery)) {
+				return;
+			}
+
+			// signal running filter to stop
+			this.cancelFiltering = true;
+
+			// cancel previous scheduled task, if any
+			if (this.pendingSearch != null && !this.pendingSearch.isDone()) {
+				this.pendingSearch.cancel(false);
+			}
+
+			// schedule new search after debounce delay; scheduled task will clear cancel flag then run
+			this.pendingSearch = this.searchExecutor.schedule(() -> {
+				// allow new filter to proceed
+				this.cancelFiltering = false;
+				runSearchFilter(query);
+			}, DEBOUNCE_MS, TimeUnit.MILLISECONDS);
+		});
+	}
+
+	/**
+	 * Performs filtering off the UI thread, cooperatively cancellable, yields
+	 * periodically, updates UI only when necessary and avoids heavy expandAll()
+	 * calls.
+	 */
+	private void runSearchFilter(String query) {
+		// quick-return: if query unchanged because something else set it, skip
+		// (we'll still set lastQuery at the end to reflect latest executed)
+		// If query empty - restore full view on UI thread
+		if (query.isEmpty()) {
+			org.eclipse.swt.widgets.Display.getDefault().asyncExec(() -> {
+				synchronized (this.searchFilteredChildren) {
+					this.searchFilteredChildren.clear();
+				}
+
+				// Reset offsets so initial 100 children load again
+				this.repoOffsets.clear();
+
+				// Refresh viewer back to initial lazy-load state
+				if (!this.modifiedObjTreeViewer.getControl().isDisposed()) {
+					this.modifiedObjTreeViewer.getControl().setRedraw(false);
+					try {
+						this.modifiedObjTreeViewer.setInput(this.repoToModifiedObjects);
+						this.modifiedObjTreeViewer.refresh();
+
+						// Collapse all so the user sees the top-level repos again
+						this.modifiedObjTreeViewer.collapseAll();
+					} finally {
+						this.modifiedObjTreeViewer.getControl().setRedraw(true);
+					}
+				}
+			});
+			synchronized (this.lastFilteredRepos) {
+				this.lastFilteredRepos.clear();
+			}
+			this.lastQuery = query;
+			return;
+		}
+
+
+		// Build filteredMap in background thread cooperatively to allow cancellation and yielding
+		final Map<IRepositoryModifiedObjects, List<IOverwriteObject>> filteredMap = new HashMap<>();
+		int processedRepos = 0;
+		int matchedObjects = 0;
+
+		for (IRepositoryModifiedObjects repo : this.repoToModifiedObjects) {
+			// cooperative cancellation
+			if (this.cancelFiltering) {
+				return;
+			}
+
+			List<IOverwriteObject> all = repo.getModifiedObjects();
+			if (all == null || all.isEmpty()) {
+				processedRepos++;
+				// periodic yield
+				if (processedRepos % YIELD_REPO_INTERVAL == 0 && !this.cancelFiltering) {
+					try {
+						Thread.sleep(1);
+					} catch (InterruptedException ex) {
+						return;
+					}
+				}
+				continue;
+			}
+
+			List<IOverwriteObject> filtered = new ArrayList<>();
+			for (IOverwriteObject obj : all) {
+				if (this.cancelFiltering) {
+					return;
+				}
+
+				// lowercase once per field
+				String name = obj.getName() != null ? obj.getName().toLowerCase() : ""; //$NON-NLS-1$
+				String pkg = obj.getPackageName() != null ? obj.getPackageName().toLowerCase() : ""; //$NON-NLS-1$
+				String type = obj.getType() != null ? obj.getType().toLowerCase() : ""; //$NON-NLS-1$
+
+				if (name.contains(query) || pkg.contains(query) || type.contains(query)) {
+					filtered.add(obj);
+					matchedObjects++;
+				}
+
+				// If total matched objects exceed cap, stop collecting more
+				if (matchedObjects >= MAX_MATCHED_OBJECTS) {
+					break;
+				}
+			}
+
+			if (!filtered.isEmpty()) {
+				filteredMap.put(repo, filtered);
+			}
+
+			processedRepos++;
+
+			// periodic yield to avoid monopolizing CPU for very large repo sets
+			if (processedRepos % YIELD_REPO_INTERVAL == 0) {
+				if (this.cancelFiltering) {
+					return;
+				}
+				try {
+					Thread.sleep(1);
+				} catch (InterruptedException ex) {
+					return;
+				}
+			}
+
+			// If matchedObjects cap hit, stop filtering more repos
+			if (matchedObjects >= MAX_MATCHED_OBJECTS) {
+				break;
+			}
+		}
+
+		// prepare set of repos that have matches
+		final Set<IRepositoryModifiedObjects> filteredRepos = filteredMap.keySet();
+
+		// Determine if UI update is necessary (avoid redundant setInput/refresh)
+		final boolean shouldUpdateUI;
+		synchronized (this.lastFilteredRepos) {
+			shouldUpdateUI = !filteredRepos.equals(this.lastFilteredRepos);
+			this.lastFilteredRepos.clear();
+			this.lastFilteredRepos.addAll(filteredRepos);
+		}
+
+		// publish filtered children map thread-safely
+		synchronized (this.searchFilteredChildren) {
+			this.searchFilteredChildren.clear();
+			this.searchFilteredChildren.putAll(filteredMap);
+		}
+
+		// Update UI (minimal, avoid expandAll)
+		org.eclipse.swt.widgets.Display.getDefault().asyncExec(() -> {
+			if (this.modifiedObjTreeViewer.getControl().isDisposed()) {
+				return;
+			}
+			this.repoOffsets.clear();
+
+			this.modifiedObjTreeViewer.getControl().setRedraw(false);
+			try {
+				if (shouldUpdateUI) {
+					this.modifiedObjTreeViewer.setInput(filteredRepos);
+					this.modifiedObjTreeViewer.refresh();
+					// Expand only first level (repositories) for responsiveness
+					for (IRepositoryModifiedObjects repo : filteredRepos) {
+						this.modifiedObjTreeViewer.expandToLevel(repo, 1);
+					}
+				} else {
+					// children changed but repo set same; refresh visible nodes
+					this.modifiedObjTreeViewer.refresh();
+				}
+			} finally {
+				this.modifiedObjTreeViewer.getControl().setRedraw(true);
+			}
+		});
+
+		// update lastQuery to reflect executed search
+		this.lastQuery = query;
+	}
+
+	private void createColumns() {
 		createTreeViewerColumn("Name", 300).setLabelProvider(new ColumnLabelProvider() { //$NON-NLS-1$
 			@Override
 			public String getText(Object element) {
-				String result = ""; //$NON-NLS-1$
-
 				if (element instanceof IRepositoryModifiedObjects) {
-					result = "Repository: " + RepositoryUtil.getRepoNameFromUrl(((IRepositoryModifiedObjects) element).getRepositoryURL()); //$NON-NLS-1$
-
+					return "Repository: " + RepositoryUtil.getRepoNameFromUrl(((IRepositoryModifiedObjects) element).getRepositoryURL()); //$NON-NLS-1$
 				} else if (element instanceof IOverwriteObject) {
-					result = ((IOverwriteObject) element).getName();
+					return ((IOverwriteObject) element).getName();
 				}
-				return result;
+				return ""; //$NON-NLS-1$
 			}
-
 		});
-
 
 		createTreeViewerColumn("Package", 200).setLabelProvider(new ColumnLabelProvider() { //$NON-NLS-1$
 			@Override
@@ -110,12 +326,10 @@ public class AbapGitWizardPageObjectsSelectionForPull extends WizardPage {
 					return ((IOverwriteObject) element).getPackageName();
 				}
 				return ""; //$NON-NLS-1$
-
 			}
-
 		});
 
-		createTreeViewerColumn("Type", 20).setLabelProvider(new ColumnLabelProvider() { //$NON-NLS-1$
+		createTreeViewerColumn("Type", 100).setLabelProvider(new ColumnLabelProvider() { //$NON-NLS-1$
 			@Override
 			public String getText(Object element) {
 				if (element instanceof IOverwriteObject) {
@@ -125,16 +339,12 @@ public class AbapGitWizardPageObjectsSelectionForPull extends WizardPage {
 			}
 		});
 
-		/**
-		 * TODO: Change this column to Description and add another column with
-		 * Action and add an icon.
-		 */
-		createTreeViewerColumn("Action", 100).setLabelProvider(new ColumnLabelProvider() { //$NON-NLS-1$
+		createTreeViewerColumn("Action", 150).setLabelProvider(new ColumnLabelProvider() { //$NON-NLS-1$
 			@Override
 			public String getText(Object element) {
 				if (element instanceof IOverwriteObject) {
 					String actionDescription = ((IOverwriteObject) element).getActionDescription();
-					if (actionDescription == null || actionDescription.isBlank()) {
+					if (actionDescription == null || actionDescription.trim().isEmpty()) {
 						return "Modify object locally"; //$NON-NLS-1$
 					}
 					return actionDescription;
@@ -142,7 +352,6 @@ public class AbapGitWizardPageObjectsSelectionForPull extends WizardPage {
 				return ""; //$NON-NLS-1$
 			}
 		});
-
 	}
 
 	private TreeViewerColumn createTreeViewerColumn(String title, int bound) {
@@ -150,61 +359,48 @@ public class AbapGitWizardPageObjectsSelectionForPull extends WizardPage {
 		viewerColumn.getColumn().setText(title);
 		this.treeColumnLayout.setColumnData(viewerColumn.getColumn(), new ColumnWeightData(20, bound, true));
 		return viewerColumn;
-
 	}
 
 	@Override
 	public void setVisible(boolean visible) {
 		super.setVisible(visible);
-
-		// if there are no modified Objects (overwrite/package warning objects), move to next page in the wizard
-		if (this.repoToModifiedObjects.isEmpty()) {
-			getContainer().showPage(getNextPage());
+		if (visible) {
+			this.searchText.setText(""); // trigger search reset //$NON-NLS-1$
+			this.searchText.setMessage("Search objects..."); //$NON-NLS-1$
+			this.repoOffsets.clear();
+			this.searchFilteredChildren.clear();
+			this.modifiedObjTreeViewer.refresh();
+			if (this.repoToModifiedObjects.isEmpty()) {
+				getContainer().showPage(getNextPage());
+			}
 		}
-
-		this.modifiedObjTreeViewer.refresh();
 	}
 
 	@Override
 	public boolean canFlipToNextPage() {
-		if (getNextPage() == null) {
-			return false;
-		}
-		return true;
+		return getNextPage() != null;
 	}
 
 	@Override
 	public IWizardPage getNextPage() {
-		//set the selected Objects on clicking next
 		this.selectedObjectsForRepository = this.modifiedObjTreeViewer.getCheckedElements();
 		return super.getNextPage();
 	}
 
-	/**
-	 * Returns the selected objects to be pulled as a set of
-	 * IRepositoryModifiedObjects
-	 *
-	 * @return checkedObjectsForRepository
-	 */
 	@SuppressWarnings("unchecked")
 	public Set<IRepositoryModifiedObjects> getSelectedObjects() {
-		Set<IRepositoryModifiedObjects> checkedObjectsForRepository = new HashSet<IRepositoryModifiedObjects>();
+		Set<IRepositoryModifiedObjects> checkedObjectsForRepository = new HashSet<>();
 		Set<IRepositoryModifiedObjects> input = (Set<IRepositoryModifiedObjects>) this.modifiedObjTreeViewer.getInput();
 
-		// Loop over the input for the checkboxTreeViewer (modifiedobjects)
 		for (IRepositoryModifiedObjects modifiedObjectsForRepository : input) {
-			List<IOverwriteObject> objects = new ArrayList<IOverwriteObject>();
+			List<IOverwriteObject> objects = new ArrayList<>();
 			String repositoryURL = modifiedObjectsForRepository.getRepositoryURL();
 
 			for (IOverwriteObject obj : modifiedObjectsForRepository.getModifiedObjects()) {
-				//If the object is in the list of checked/selected objects ,
-				// add it to the list of objects to pull and map it to the corresponding repo
 				if (Arrays.asList(this.selectedObjectsForRepository).contains(obj)) {
 					objects.add(obj);
 				}
 			}
-
-			// map list of objects to pull  to the corresponding repo
 			if (!objects.isEmpty()) {
 				checkedObjectsForRepository.add(new RepositoryModifiedObjects(repositoryURL, objects));
 			}
@@ -213,6 +409,7 @@ public class AbapGitWizardPageObjectsSelectionForPull extends WizardPage {
 	}
 
 	private class ModifiedObjectTreeContentProvider implements ITreeContentProvider {
+		private static final int BATCH_SIZE = 100;
 
 		@Override
 		public Object[] getElements(Object inputElement) {
@@ -222,65 +419,99 @@ public class AbapGitWizardPageObjectsSelectionForPull extends WizardPage {
 		@Override
 		public Object[] getChildren(Object parentElement) {
 			if (parentElement instanceof IRepositoryModifiedObjects) {
-				IRepositoryModifiedObjects modifiedObjectsForRepo = (IRepositoryModifiedObjects) parentElement;
-				return modifiedObjectsForRepo.getModifiedObjects().toArray();
+				IRepositoryModifiedObjects repo = (IRepositoryModifiedObjects) parentElement;
+
+				// If search is active, return filtered children
+				synchronized (AbapGitWizardPageObjectsSelectionForPull.this.searchFilteredChildren) {
+					if (!AbapGitWizardPageObjectsSelectionForPull.this.searchFilteredChildren.isEmpty()
+							&& AbapGitWizardPageObjectsSelectionForPull.this.searchFilteredChildren.containsKey(repo)) {
+						return AbapGitWizardPageObjectsSelectionForPull.this.searchFilteredChildren.get(repo).toArray();
+					}
+				}
+
+				List<IOverwriteObject> all = repo.getModifiedObjects();
+				int loaded = AbapGitWizardPageObjectsSelectionForPull.this.repoOffsets.getOrDefault(repo, 0);
+				if (loaded == 0) {
+					loaded = Math.min(BATCH_SIZE, all.size());
+					AbapGitWizardPageObjectsSelectionForPull.this.repoOffsets.put(repo, loaded);
+				}
+				return all.subList(0, loaded).toArray();
 			}
-			return null;
+			return new Object[0];
+		}
+
+		@Override
+		public boolean hasChildren(Object element) {
+			if (element instanceof IRepositoryModifiedObjects) {
+				synchronized (AbapGitWizardPageObjectsSelectionForPull.this.searchFilteredChildren) {
+					if (!AbapGitWizardPageObjectsSelectionForPull.this.searchFilteredChildren.isEmpty()
+							&& AbapGitWizardPageObjectsSelectionForPull.this.searchFilteredChildren.containsKey(element)) {
+						return !AbapGitWizardPageObjectsSelectionForPull.this.searchFilteredChildren.get(element).isEmpty();
+					}
+				}
+				return !((IRepositoryModifiedObjects) element).getModifiedObjects().isEmpty();
+			}
+			return false;
 		}
 
 		@Override
 		public Object getParent(Object element) {
 			return null;
 		}
-
-		@Override
-		public boolean hasChildren(Object element) {
-			if (element instanceof IRepositoryModifiedObjects) {
-				IRepositoryModifiedObjects modifiedObjectsForRepo = (IRepositoryModifiedObjects) element;
-				return modifiedObjectsForRepo.getModifiedObjects().size() == 0 ? false : true;
-			}
-			return false;
-		}
-
 	}
 
 	private void addListeners() {
-		// Check the sub tree if parent is checked
 		this.modifiedObjTreeViewer.addCheckStateListener(new ICheckStateListener() {
-
 			@Override
 			public void checkStateChanged(CheckStateChangedEvent event) {
-				if (event.getElement() instanceof IRepositoryModifiedObjects) {
-					if (event.getChecked()) {
-						AbapGitWizardPageObjectsSelectionForPull.this.modifiedObjTreeViewer.setSubtreeChecked(event.getElement(), true);
-					} else {
-						AbapGitWizardPageObjectsSelectionForPull.this.modifiedObjTreeViewer.setSubtreeChecked(event.getElement(), false);
+				Object element = event.getElement();
 
-						//keep the objects to be added locally checked always
-						IRepositoryModifiedObjects modifiedObjects = (IRepositoryModifiedObjects) event.getElement();
-						List<IOverwriteObject> objectsToAddLocally = modifiedObjects.getModifiedObjects().stream()
-								.filter((obj) -> obj.getAction() != null && obj.getAction().equals("1")).collect(Collectors.toList()); //$NON-NLS-1$
-						AbapGitWizardPageObjectsSelectionForPull.this.modifiedObjTreeViewer
-								.setCheckedElements(objectsToAddLocally.toArray());
+				if (element instanceof IRepositoryModifiedObjects) {
+					IRepositoryModifiedObjects repo = (IRepositoryModifiedObjects) element;
+					boolean checked = event.getChecked();
+					for (IOverwriteObject obj : repo.getModifiedObjects()) {
+						if (!"1".equals(obj.getAction())) { //$NON-NLS-1$
+							AbapGitWizardPageObjectsSelectionForPull.this.modifiedObjTreeViewer.setChecked(obj, checked);
+						} else {
+							AbapGitWizardPageObjectsSelectionForPull.this.modifiedObjTreeViewer.setChecked(obj, true);
+						}
+					}
+				} else if (element instanceof IOverwriteObject) {
+					IOverwriteObject child = (IOverwriteObject) element;
+					IRepositoryModifiedObjects parent = findParent(child);
+
+					if (parent != null) {
+						List<IOverwriteObject> all = parent.getModifiedObjects();
+						boolean allChecked = true;
+						for (IOverwriteObject obj : all) {
+							if (!AbapGitWizardPageObjectsSelectionForPull.this.modifiedObjTreeViewer.getChecked(obj)
+									&& !"1".equals(obj.getAction())) { //$NON-NLS-1$
+								allChecked = false;
+								break;
+							}
+						}
+						AbapGitWizardPageObjectsSelectionForPull.this.modifiedObjTreeViewer.setChecked(parent, allChecked);
+					}
+
+					if ("1".equals(child.getAction())) { //$NON-NLS-1$
+						AbapGitWizardPageObjectsSelectionForPull.this.modifiedObjTreeViewer.setChecked(child, true);
 					}
 				}
-
-				if (event.getElement() instanceof IOverwriteObject) {
-					IOverwriteObject modifiedObject = (IOverwriteObject) event.getElement();
-					if (modifiedObject.getAction() != null && modifiedObject.getAction().equals("1")) { //$NON-NLS-1$
-						AbapGitWizardPageObjectsSelectionForPull.this.modifiedObjTreeViewer.setChecked(modifiedObject, true);
-					}
-				}
-
 				AbapGitWizardPageObjectsSelectionForPull.this.selectedObjectsForRepository = AbapGitWizardPageObjectsSelectionForPull.this.modifiedObjTreeViewer
 						.getCheckedElements();
+			}
 
+			private IRepositoryModifiedObjects findParent(IOverwriteObject obj) {
+				for (IRepositoryModifiedObjects repo : AbapGitWizardPageObjectsSelectionForPull.this.repoToModifiedObjects) {
+					if (repo.getModifiedObjects().contains(obj)) {
+						return repo;
+					}
+				}
+				return null;
 			}
 		});
 
-		// Check elements which have action as 1 i.e. Objects to be added
 		this.modifiedObjTreeViewer.setCheckStateProvider(new ICheckStateProvider() {
-
 			@Override
 			public boolean isGrayed(Object element) {
 				return false;
@@ -289,14 +520,70 @@ public class AbapGitWizardPageObjectsSelectionForPull extends WizardPage {
 			@Override
 			public boolean isChecked(Object element) {
 				if (element instanceof IOverwriteObject) {
-					IOverwriteObject object = (IOverwriteObject) element;
-					if (object.getAction() != null && object.getAction().equals("1")) { //$NON-NLS-1$
-						return true;
-					}
+					return "1".equals(((IOverwriteObject) element).getAction()); //$NON-NLS-1$
 				}
 				return false;
 			}
 		});
+
+		var tree = this.modifiedObjTreeViewer.getTree();
+		tree.addListener(SWT.MouseWheel, e -> tryLazyLoad());
+		tree.addListener(SWT.Selection, e -> tryLazyLoad());
+		tree.addListener(SWT.Resize, e -> tryLazyLoad());
+		tree.addListener(SWT.MouseUp, e -> tryLazyLoad());
+	}
+
+	private void tryLazyLoad() {
+		// disable lazy load while search is active
+		synchronized (this.searchFilteredChildren) {
+			if (!this.searchFilteredChildren.isEmpty()) {
+				return;
+			}
+		}
+
+		var tree = this.modifiedObjTreeViewer.getTree();
+		ScrollBar vBar = tree.getVerticalBar();
+		if (vBar == null || vBar.getMaximum() == 0) {
+			return;
+		}
+
+		int scrollPosition = vBar.getSelection() + vBar.getThumb();
+		int threshold = (int) (vBar.getMaximum() * 0.9);
+
+		if (scrollPosition >= threshold) {
+			Object[] expandedElements = this.modifiedObjTreeViewer.getExpandedElements();
+
+			for (Object parent : expandedElements) {
+				if (parent instanceof IRepositoryModifiedObjects) {
+					IRepositoryModifiedObjects repo = (IRepositoryModifiedObjects) parent;
+					loadNextBatch(repo);
+				}
+			}
+		}
+	}
+
+	private void loadNextBatch(IRepositoryModifiedObjects repo) {
+		List<IOverwriteObject> all = repo.getModifiedObjects();
+		int currentOffset = this.repoOffsets.getOrDefault(repo, 0);
+
+		if (currentOffset >= all.size()) {
+			return;
+		}
+
+		int nextOffset = Math.min(currentOffset + ModifiedObjectTreeContentProvider.BATCH_SIZE, all.size());
+		List<IOverwriteObject> nextBatch = all.subList(currentOffset, nextOffset);
+		this.repoOffsets.put(repo, nextOffset);
+
+		this.modifiedObjTreeViewer.getControl().setRedraw(false);
+		try {
+			for (IOverwriteObject obj : nextBatch) {
+				this.modifiedObjTreeViewer.add(repo, obj);
+				if ("1".equals(obj.getAction())) { //$NON-NLS-1$
+					this.modifiedObjTreeViewer.setChecked(obj, true);
+				}
+			}
+		} finally {
+			this.modifiedObjTreeViewer.getControl().setRedraw(true);
+		}
 	}
 }
-
